made sponsor page text match pdf document

--- a/views/sponsor.erb
+++ b/views/sponsor.erb
@@ -5,29 +5,29 @@
 
       <h1>Become a Sponsor</h1>
 
-      <p class="sponsor__info">The <span class="bold-blue">5C Hackathon</span> is a semiannual hackathon held on Pomona College's campus. Last semester, over 300 of the Claremont Colleges' brightest techincal minds spent 12 hours hacking on projects ranging from 8trhacker, a Chrome extension to bypass limits on 8tracks, to GitBattle, an app to battle GitHub accounts.</p>
+      <p class="sponsor__info">The <span class="bold-blue">5C Hackathon</span> is a semiannual hackathon held on Pomona College's campus. Last semester, over 300 of the Claremont Colleges' brightest techincal minds spent 12 hours working on projects ranging from <i>SmartBag</i>, a backpack that knows exactly what’s in it, to <i>Snakes on a (hyper)plane</i>, a real-time multiplayer 3D snake game.</p>
       <p class="sponsor__info">An entirely student-run event, the 5C Hackathon has rapidly become a highly anticipated and attended tradition at the Claremont Colleges, drawing talent from five different schools: Pomona, Harvey Mudd, Claremont McKenna, Scripps, and Pitzer.</p>
 
 
-      <h2 class="no-margin-top dark-blue">What Makes the 5C Hackathon Different?</h2>
+      <h2 class="no-margin-top dark-blue">What makes the 5C Hackathon different?</h2>
 
       <p class="sponsor__info">
-        We pride ourselves on building a technical community at the Claremont Colleges that is inclusive, creative, and diverse. With that in mind, we focus on making the 5C Hackathon a <span class="bold-blue">beginner-friendly hackathon</span>. Last semester, <span class="bold-blue">56% of our attendees were female, and 51% were first-time hackers</span>.
+        We pride ourselves on building a technical community at the Claremont Colleges that is creative and diverse. With that in mind, we focus on making the 5C Hackathon <span class="bold-blue">beginner-friendly and inclusive</span>. Last semester, <span class="bold-blue">40% of our attendees were first-time hackers and 45% were female</span>.
       </p>
 
       <p class="sponsor__info">
-        Teaching and mentorship is of the utmost importance to us. Each semester we host sessions in the week leading up to the event that teach beginners the basics of how to code, enabling to atendees to compete in the 5C Hackathon. In the past, we've taught beginners how to make mobile apps using PhoneGap, web apps using Node.js, and how to use a database using MongoDB. We also have mentors throughout the night who are always available to help teams.
+        Teaching and mentorship is of the utmost importance to us. Each semester we have week-long classes that teach beginners the basics of how to code so that they can participate in the hackathon. In the past, we've taught beginners how to make mobile apps using Android, web apps using Node.js, and digital art using p5.js. We also have mentors throughout the night of the Hackathon who are always available to help teams with their ideas.
       </p>
 
 
-      <h2 class="no-margin-top dark-blue">Why Sponsor?</h2>
+      <h2 class="no-margin-top dark-blue">Why sponsor?</h2>
 
       <p class="sponsor__info">
-        Sponsoring is a great way to connect with the top computer science students at the Claremont Colleges. By sponsoring, you can get <span class="bold-blue">access to resumes and portfolios</span> of over 300 of students, <span class="bold-blue">showcase your API or product</span> and see students make awesome projects with them, and get beginners excited about programming by mentoring them.
+        Sponsoring is a great way to connect with the top computer science students at the Claremont Colleges. By sponsoring, you can get <span class="bold-blue">access to resumes and portfolios</span> of over 300 students, <span class="bold-blue">showcase your API or product</span>, and see students make awesome projects with them. As a sponsor, you'll also have the opportunity to mentor students and get them excited about programming!
       </p>
 
       <p class="sponsor__info">
-        Please see the sponsorship tier list detailing the different ways in which you can be part of the 5C Hackathon. Shoot us an email at <a href="mailto:5chackathon@gmail.com">5chackathon@gmail.com</a> and we'll work out the details.</p>
+        Please see the sponsorship tier list below detailing the different ways in which you can be a part of the 5C Hackathon. Can't fnd a tier that works for you? Shoot us an email at <a href="mailto:5chackathon@gmail.com">5chackathon@gmail.com</a> and we'll work out the details.</p>
     </div>
   </div>
   </section>
