updated sponsors for fall 2016

--- a/views/index.erb
+++ b/views/index.erb
@@ -57,8 +57,8 @@
 
 <section class="companies" id="companies">
 <div class="layout--page">
-  <h1 style="margin-bottom: 0.25em;">Spring 2016 Sponsors</h1>
-  <h3 style="margin-top: -1em;">(Fall 2016 sponsors will be announced shortly!)</h3>
+  <h1 style="margin-bottom: 0.25em;">Fall 2016 Sponsors</h1>
+  <!-- <h3 style="margin-top: -1em;">([semester] sponsors will be announced shortly!)</h3> -->
 
   <p>
     <h5 style="color: #000;">
@@ -73,16 +73,15 @@
 
   <h3>Gold</h3>
   <div class="logos sponsors">
-    <a href="http://www.intuit.com/"><img src="img/sponsors/intuit.png" height="60" alt="Intuit"></a>
-    <a href="http://www.meraki.com/"><img src="img/sponsors/past/meraki.png" height="70" alt="Cisco Meraki"></a>
-    <a href="http://www.google.com/"><img src="img/sponsors/google.png" height="70" alt="Google"></a>
+    <a href="http://www.google.com/"><img src="img/sponsors/google.png" height="60" alt="Google"></a>
+    <a href="http://a16z.com/"><img src="img/sponsors/a16z.png" height="60" alt="Andreessen Horowitz"></a>
+    <a href="http://liveramp.com/"><img src="img/sponsors/liveramp.png" height="60" alt="LiveRamp"></a>
   </div>
 
   <h3>Bronze</h3>
   <div class="logos sponsors">
-    <a href="http://www.yelp.com/"><img src="img/sponsors/past/yelp.png" height="90" alt="Yelp"></a>
-
-    <a href="http://laserfiche.com/"><img src="img/sponsors/laserfiche.png" height="50" alt="Laserfiche"></a>
+    <a href="https://www.laserfiche.com/"><img src="img/sponsors/laserfiche.png" height="45" alt="Laserfiche"></a>
+    <a href="http://www.coursera.org/"><img src="img/sponsors/coursera.png" height="30" alt="Coursera"></a>
   </div>
 </section>
 
