added intuit as fa2016 sponsor

--- a/views/index.erb
+++ b/views/index.erb
@@ -74,8 +74,10 @@
   <h3>Gold</h3>
   <div class="logos sponsors">
     <a href="http://www.google.com/"><img src="img/sponsors/google.png" height="60" alt="Google"></a>
-    <a href="http://a16z.com/"><img src="img/sponsors/a16z.png" height="60" alt="Andreessen Horowitz"></a>
     <a href="http://liveramp.com/"><img src="img/sponsors/liveramp.png" height="60" alt="LiveRamp"></a>
+    <br>
+    <a href="http://a16z.com/"><img src="img/sponsors/a16z.png" height="60" alt="Andreessen Horowitz"></a>
+    <a href="http://www.intuit.com/"><img src="img/sponsors/intuit.png" height="60" alt="LiveRamp"></a>
   </div>
 
   <h3>Bronze</h3>
