--- a/public/styles.css
+++ b/public/styles.css
@@ -540,14 +540,14 @@ header:after {
 
 .current > .nav--link:before { max-width: 100%; }
 
-.nav--link.reg {
+/* .nav--link.reg {
   margin-top: 14px;
 }
 @media (min-width: 695px) {
   .nav--link.reg {
     margin-top: auto;
   }
-}
+} */
 
 
 .reg {
@@ -566,8 +566,8 @@ header:after {
 
 .reg:after {
   /* Coming soon text */
-  content: "coming soon";
-  /* When disabling, make sure to comment out the
+  /* content: "coming soon"; */
+  /* When enabling/disabling, make sure to (un)comment the
      .nav--link.reg margin-top lines, too (for mobile layouts) */
   text-transform: uppercase;
   position: absolute;
