--- a/views/fullpage.erb
+++ b/views/fullpage.erb
@@ -12,8 +12,29 @@
 <script src="/bower_components/modernizr/modernizr.js"></script>
 
 <style>
-html, body {
-    height: 100%;
+html {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
+body {
+  height: 100%;
+}
+iframe{
+  position: absolute;
+  left:0;
+  right:0;
+  bottom:0;
+  top:0;
+  border:0;
+}
+header {
+  display: none; /* don't push content off page */
+}
+@media (min-width: 695px) {
+  header {
+    display: inline; /* default value */
+  }
 }
 </style>
 </head>
