--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,7 +28,7 @@
           <li class=""><a class="nav--link" href="/#companies" data-text="SPONSORS">Sponsors</a></li>
           <li class=""><a class="nav--link" href="/#team" data-text="TEAM">Team</a></li>
           <li class=""><a class="nav--link" href="/#hack-week" data-text="HACK WEEK">Hack Week</a></li>
-          <li><a href="/register" class="nav--link reg">Register</a></li>
+          <li><a style="cursor: pointer;" class="nav--link reg">Register</a></li>
         </ul>
       </nav>
     </div>
@@ -47,7 +47,7 @@
           </span>
         </div>
       </div>
-      <a href="/register" class="footer__reg reg">Register</a>
+      <a style="cursor: pointer;" class="footer__reg reg">Register</a>
     </div>
     <div class="closure">
       <div class="layout--page">
