updated dates, organizers, sponsors, and text on why sponsor page

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title><%= @title %></title>
-<meta name="description" content="5C Hackathon November 11, 2016">
+<meta name="description" content="5C Hackathon November 10-11, 2017">
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="styles.css">
@@ -43,7 +43,7 @@
         <div class="footer__title">
           5C Hackathon
           <span class="footer__date">
-            November 11, 2016 &nbsp; &nbsp; Pomona College
+            November 10-11, 2017 &nbsp; &nbsp; Pomona College
           </span>
         </div>
       </div>
@@ -58,14 +58,14 @@
           <a target="_blank" class="social__link facebook" href="http://www.facebook.com/5CHackathon">
             <i class="fa fa-facebook"></i><span class="visuallyhidden">Facebook</span>
           </a>
-          <a class="social__link github" href="https://github.com/5CHackathon">
+          <a target="_blank" class="social__link github" href="https://github.com/5CHackathon">
             <i class="fa fa-github"></i><span class="visuallyhidden">GitHub</span>
           </a>
           <a target="_blank" class="social__link twitter" href="http://twitter.com/5CHackathon">
             <i class="fa fa-twitter"></i><span class="visuallyhidden">Twitter</span>
           </a>
         </div>
-        <span class="closure__copy">&copy; 2016 5C Hackathon</span>
+        <span class="closure__copy">&copy; 2017 5C Hackathon</span>
       </div>
     </div>
   </footer>
