--- a/views/index.erb
+++ b/views/index.erb
@@ -18,8 +18,8 @@
 
 <section class="schedule" id="schedule">
   <table class="layout--page">
-    <div class="caption">Fall 2016 Schedule</div>
-    <h4 style="text-align: center; margin-top: -.5em; margin-bottom: 1em;">November 11&ndash;12, 2016</h4>
+    <div class="caption">Fall 2017 Schedule</div>
+    <h4 style="text-align: center; margin-top: -.5em; margin-bottom: 1em;">November 10&ndash;11, 2017</h4>
     <tr>
       <td class="session__time">7:00 PM</td>
       <td>Kickoff</td>
@@ -53,52 +53,37 @@
 
 <section class="companies" id="companies">
 <div class="layout--page">
-  <h1 style="margin-bottom: 0.25em;">Fall 2016 Sponsors</h1>
+  <h1 style="margin-bottom: 0.25em;">Fall 2017 Sponsors</h1>
   <!-- <h3 style="margin-top: -1em;">([semester] sponsors will be announced shortly!)</h3> -->
 
   <p>
     <h5 style="color: #000;">
-      Interested in sponsoring the Fall 2016 Hackathon? Click <a href="/sponsor">here</a> for more information.
+      Interested in sponsoring the Fall 2017 Hackathon? Click <a href="/sponsor">here</a> for more information.
     </h5>
   </p>
-
-  <h3>Platinum</h3>
-  <div class="logos sponsors">
-    <a href="http://www.proofpoint.com/"><img src="img/sponsors/proofpoint.png" height="90" alt="Proofpoint" style="min-width:492px;"></a>
-  </div>
 
   <h3>Gold</h3>
   <div class="logos sponsors">
     <a href="http://www.google.com/"><img src="img/sponsors/google.png" height="60" alt="Google"></a>
-    <a href="http://liveramp.com/"><img src="img/sponsors/liveramp.png" height="60" alt="LiveRamp"></a>
-    <br>
-    <a href="http://a16z.com/"><img src="img/sponsors/a16z.png" height="60" alt="Andreessen Horowitz"></a>
     <a href="http://www.intuit.com/"><img src="img/sponsors/intuit.png" height="60" alt="LiveRamp"></a>
   </div>
 
   <h3>Bronze</h3>
   <div class="logos sponsors">
     <a href="https://www.laserfiche.com/"><img src="img/sponsors/laserfiche.png" height="45" alt="Laserfiche"></a>
-    <a href="http://www.coursera.org/"><img src="img/sponsors/coursera.png" height="30" alt="Coursera"></a>
+    <a href="https://www.wolframalpha.com/"><img src="img/sponsors/wolfram.png" height="45" alt="Wolfram"></a>
   </div>
 </section>
 
 <section class="team" id="team">
   <div class="layout--page">
     <h1 style="color: #fff;">The Planning Committee</h1>
-    <div class="speaker">
-      <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/lucas.png);"></div>
-      </div>
-      <div class="speaker__name" style="color:#fff;">Lucas Dos Santos</div>
-      <div class="speaker__title" style="color: #fff;">Senior</div>
       <!-- <div class="speaker__company" style="color: #fff;"></div> -->
-    </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/eli.png);"></div>
+        <div class="speaker__img" style="background-image: url(img/team/erinna.png);"></div>
       </div>
-      <div class="speaker__name" style="color:#fff">Eli Fessler</div>
+      <div class="speaker__name" style="color:#fff;">Erinna Woo</div>
       <div class="speaker__title" style="color: #fff;">Senior</div>
     </div>
     <div class="speaker">
@@ -106,27 +91,20 @@
         <div class="speaker__img" style="background-image: url(img/team/gloria.png);"></div>
       </div>
       <div class="speaker__name" style="color:#fff">Gloria Liou</div>
-      <div class="speaker__title" style="color: #fff;">Junior</div>
+      <div class="speaker__title" style="color: #fff;">Senior</div>
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
         <div class="speaker__img" style="background-image: url(img/team/ross.png);"></div>
       </div>
       <div class="speaker__name" style="color:#fff">Ross Wollman</div>
-      <div class="speaker__title" style="color: #fff;">Junior</div>
-    </div>
-    <div class="speaker">
-      <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/zach.png);"></div>
-      </div>
-      <div class="speaker__name" style="color:#fff;">Zach Hauser</div>
       <div class="speaker__title" style="color: #fff;">Senior</div>
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/erinna.png);"></div>
+        <div class="speaker__img" style="background-image: url(img/team/wentao.png);"></div>
       </div>
-      <div class="speaker__name" style="color:#fff;">Erinna Woo</div>
+      <div class="speaker__name" style="color:#fff;">Wentao Guo</div>
       <div class="speaker__title" style="color: #fff;">Junior</div>
     </div>
   </div>
