--- a/views/sponsor.erb
+++ b/views/sponsor.erb
@@ -5,29 +5,37 @@
 
       <h1>Become a Sponsor</h1>
 
-      <p class="sponsor__info">The <span class="bold-blue">5C Hackathon</span> is a semiannual hackathon held on Pomona College's campus. Last semester, over 300 of the Claremont Colleges' brightest techincal minds spent 12 hours working on projects ranging from <i>SmartBag</i>, a backpack that knows exactly what’s in it, to <i>Snakes on a (hyper)plane</i>, a real-time multiplayer 3D snake game.</p>
-      <p class="sponsor__info">An entirely student-run event, the 5C Hackathon has rapidly become a highly anticipated and attended tradition at the Claremont Colleges, drawing talent from five different schools: Pomona, Harvey Mudd, Claremont McKenna, Scripps, and Pitzer.</p>
+      <p class="sponsor__info">
+        The <span class="bold-blue">5C Hackathon</span> is an entirely student-run event held on Pomona College’s campus. Last fall, over 300 of the Claremont Colleges’ brightest technical minds spent 12 hours working on projects ranging from a real-time LaTeX messenger to a multiplayer space game that uses your smartphone as a controller.
+      </p>
+
+      <p class="sponsor__info">
+        The 5C Hackathon has rapidly become a highly anticipated and attended tradition at the Claremont Colleges, drawing talent from all five schools in the consortium: <span class="bold-blue">Pomona, Harvey Mudd, Claremont McKenna, Scripps, and Pitzer</span>. We also attract students from nearby colleges, such as University of Southern California and UCLA, as well as from local high schools.
+      </p>
 
 
       <h2 class="no-margin-top dark-blue">What makes the 5C Hackathon different?</h2>
 
       <p class="sponsor__info">
-        We pride ourselves on building a technical community at the Claremont Colleges that is creative and diverse. With that in mind, we focus on making the 5C Hackathon <span class="bold-blue">beginner-friendly and inclusive</span>. Last semester, <span class="bold-blue">40% of our attendees were first-time hackers and 45% were female</span>.
+        We pride ourselves on building a technical community at the Claremont Colleges that is creative and diverse. With that in mind, we have a strong focus on making the 5C Hackathon <span class="bold-blue">beginner-friendly and inclusive</span>. Last year, <span class="bold-blue">46% of our attendees were first-time hackers and 45% were female</span>.
       </p>
 
       <p class="sponsor__info">
-        Teaching and mentorship is of the utmost importance to us. Each semester we have week-long classes that teach beginners the basics of how to code so that they can participate in the hackathon. In the past, we've taught beginners how to make mobile apps using Android, web apps using Node.js, and digital art using p5.js. We also have mentors throughout the night of the Hackathon who are always available to help teams with their ideas.
+        <span class="bold-blue">Teaching and mentorship</span> are also of the utmost importance to us. We offer beginner and advanced workshops throughout the week before the hackathon. The beginner workshops offer students the opportunity to learn coding basics so that they can participate in the hackathon. The advanced workshops teach students with technical experience a new skill or tool to utilize at the hackathon. In the past, we’ve taught how to make mobile apps using Android, web apps using Node.js, and digital art using P5.
       </p>
 
+      <p class="sponsor__info">
+        We also have mentors throughout the night of the Hackathon who are available to help develop ideas or provide technical guidance.
+      </p>
 
       <h2 class="no-margin-top dark-blue">Why sponsor?</h2>
 
       <p class="sponsor__info">
-        Sponsoring is a great way to connect with the top computer science students at the Claremont Colleges. By sponsoring, you can get <span class="bold-blue">access to resumes and portfolios</span> of over 300 students, <span class="bold-blue">showcase your API or product</span>, and see students make awesome projects with them. As a sponsor, you'll also have the opportunity to mentor students and get them excited about programming!
+        Sponsoring is a great way to connect with some of the top computer science students at the Claremont Colleges. By sponsoring, you can <span class="bold-blue">get access to the resumes of over 300 students</span>, <span class="bold-blue">showcase your API or product</span>, and see students make awesome projects. As a sponsor, you’ll also have the opportunity to mentor students and get them excited about programming!
       </p>
 
       <p class="sponsor__info">
-        Please see the sponsorship tier list below detailing the different ways in which you can be a part of the 5C Hackathon. Can't fnd a tier that works for you? Shoot us an email at <a href="mailto:5chackathon@gmail.com">5chackathon@gmail.com</a> and we'll work out the details.</p>
+        Please see the sponsorship tiers below detailing the different ways in which you can be part of the 5C Hackathon. Can’t find a tier that works for you? <span class="bold-blue">Shoot us an email at <a href="mailto:5chackathon@gmail.com">5chackathon@gmail.com</a></span> and we’ll work out the details.</p>
     </div>
   </div>
   </section>
