modified display of sponsorship tiers to reduce redundancy and make the price labels fit inside their panels

--- a/views/sponsor.erb
+++ b/views/sponsor.erb
@@ -68,11 +68,8 @@
               <h3 class="panel-title price">$2000</h3>
             </div>
             <ul class="list-group">
+              <li class="list-group-item"><strong>Everything in Bronze</strong></li>
               <li class="list-group-item">Speak at opening ceremony</li>
-              <li class="list-group-item">Swag distribution</li>
-              <li class="list-group-item">Send engineers &amp; recruiters</li>
-              <li class="list-group-item">Mention of API/developer tools upon request</li>
-              <li class="list-group-item">Logo on website, T-shirts, poster</li>
             </ul>
           </div>
         </div>
@@ -85,12 +82,8 @@
               <h3 class="panel-title price">$3000</h3>
             </div>
             <ul class="list-group">
+              <li class="list-group-item"><strong>Everything in Silver</strong></li>
               <li class="list-group-item">Access to participant resume database</li>
-              <li class="list-group-item">Speak at opening ceremony</li>
-              <li class="list-group-item">Swag distribution</li>
-              <li class="list-group-item">Send engineers &amp; recruiters</li>
-              <li class="list-group-item">Mention of API/developer tools upon request</li>
-              <li class="list-group-item">Logo on website, T-shirts, poster</li>
             </ul>
           </div>
         </div>
