--- a/views/index.erb
+++ b/views/index.erb
@@ -21,20 +21,20 @@
     <div class="caption">Fall 2017 Schedule</div>
     <h4 style="text-align: center; margin-top: -.5em; margin-bottom: 1em;">November 10&ndash;11, 2017</h4>
     <tr>
+      <td class="session__time">6:30 PM</td>
+      <td>Check-in</td>
+    </tr>
+    <tr>
       <td class="session__time">7:00 PM</td>
       <td>Kickoff</td>
     </tr>
     <tr>
-      <td class="session__time">8:00 PM</td>
+      <td class="session__time">7:30 PM</td>
       <td>Hacking begins</td>
     </tr>
     <tr>
       <td class="session__time">10:00 PM</td>
-      <td>Chipotle is served</td>
-    </tr>
-    <tr>
-      <td class="session__time">2:00 AM</td>
-      <td>2-minute run</td>
+      <td>Chipotle</td>
     </tr>
     <tr>
       <td class="session__time">4:00 AM</td>
@@ -43,6 +43,10 @@
     <tr>
       <td class="session__time">8:00 AM</td>
       <td>Expo Presentation</td>
+    </tr>
+    <tr>
+      <td class="session__time">9:30 AM</td>
+      <td>Awards ceremony</td>
     </tr>
     <tr>
       <td class="session__time">10:00 AM</td>
