updated sponsors and planning committee

--- a/views/index.erb
+++ b/views/index.erb
@@ -60,11 +60,10 @@
   <h1 style="margin-bottom: 0.25em;">Fall 2017 Sponsors</h1>
   <!-- <h3 style="margin-top: -1em;">([semester] sponsors will be announced shortly!)</h3> -->
 
-  <p>
-    <h5 style="color: #000;">
-      Interested in sponsoring the Fall 2017 Hackathon? Click <a href="/sponsor">here</a> for more information.
-    </h5>
-  </p>
+  <h3>Platinum</h3>
+  <div class="logos sponsors">
+    <a href="https://www.proofpoint.com/"><img src="img/sponsors/proofpoint.png" height="90" alt="Proofpoint"></a>
+  </div>
 
   <h3>Gold</h3>
   <div class="logos sponsors">
@@ -77,6 +76,12 @@
     <a href="https://www.laserfiche.com/"><img src="img/sponsors/laserfiche.png" height="45" alt="Laserfiche"></a>
     <a href="https://www.wolframalpha.com/"><img src="img/sponsors/wolfram.png" height="45" alt="Wolfram"></a>
   </div>
+
+  <p>
+    <h5 style="color: #000;">
+      Interested in sponsoring the Fall 2018 Hackathon? Click <a href="/sponsor">here</a> for more information.
+    </h5>
+  </p>
 </section>
 
 <section class="team" id="team">
@@ -95,13 +100,6 @@
         <div class="speaker__img" style="background-image: url(img/team/gloria.png);"></div>
       </div>
       <div class="speaker__name" style="color:#fff">Gloria Liou</div>
-      <div class="speaker__title" style="color: #fff;">Senior</div>
-    </div>
-    <div class="speaker">
-      <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/ross.png);"></div>
-      </div>
-      <div class="speaker__name" style="color:#fff">Ross Wollman</div>
       <div class="speaker__title" style="color: #fff;">Senior</div>
     </div>
     <div class="speaker">
