updated Hack Week description

--- a/views/index.erb
+++ b/views/index.erb
@@ -151,14 +151,15 @@
 <section class="hack-week" id="hack-week">
   <div class="layout--page">
     <h1>Hack Week</h1>
-    <h2 style="color: #00467f; margin: -.5em 0 .25em;">Hack Week is a weeklong tutorial that teaches you how to build a web app with little to no programming experience.</h2>
+    <h2 style="color: #00467f; margin: -.5em 0 .25em;">Hack Week is a weeklong series of workshops teaching useful technical skills for both beginning and advanced coders and covering socially relevant issues within the world of tech and computer science.</h2>
     <div class="desc">
       <h3>When</h3>
       <p>Hack Week is every evening from 8:30&ndash;10 p.m. starting the Monday before the Hackathon and culminating in the 5C Hackathon on Friday.</p>
       <h3>What</h3>
-      <p>Hack Week has both a beginner and advanced section that teaches you how to build a dynamic web application. Last spring we covered basic HTML/CSS, front-end interactions with JavaScript and jQuery, web servers with Node.js, sleek and easy design with Bootstrap, and databases with MongoDB.</p>
+      <p><b>Want to learn coding skills?</b> Hack Week workshops will help you learn how to build and host a website, create an Android application from the ground up, and use Github with your next project.</p>
+      <p><b>Want to learn about issues in the world of computer science?</b> Workshops hosted by the Pomona College Advocates and Tech4Good at the 5Cs will be discussing sexual assault and discrimination in tech and human-centered software development.</p>
       <h3>Code</h3>
-      <p>Check out the apps from this year and previous years at our <a href="http://github.com/5CHackathon">GitHub</a> page. During Hack Week, the starter code for each day will also be uploaded here.</p>
+      <p>Check out the apps from this year and previous years at our <a href="http://github.com/5CHackathon">GitHub</a> page. During Hack Week, starter code for technical workshops will also be uploaded here.</p>
     </div>
   </div>
 </section>
