added location to schedule

--- a/views/index.erb
+++ b/views/index.erb
@@ -22,7 +22,7 @@
     <h4 style="text-align: center; margin-top: -.5em; margin-bottom: 1em;">November 10&ndash;11, 2017</h4>
     <tr>
       <td class="session__time">6:30 PM</td>
-      <td>Check-in</td>
+      <td>Check-in at Edmunds Ballroom (Pomona)</td>
     </tr>
     <tr>
       <td class="session__time">7:00 PM</td>
