changed Wolfram from bronze to supporter

--- a/views/index.erb
+++ b/views/index.erb
@@ -74,7 +74,11 @@
   <h3>Bronze</h3>
   <div class="logos sponsors">
     <a href="https://www.laserfiche.com/"><img src="img/sponsors/laserfiche.png" height="45" alt="Laserfiche"></a>
-    <a href="https://www.wolframalpha.com/"><img src="img/sponsors/wolfram.png" height="45" alt="Wolfram"></a>
+  </div>
+
+  <h3>Supporters</h3>
+  <div class="logos sponsors">
+    <a href="https://www.wolframalpha.com/"><img src="img/sponsors/wolfram.png" height="40" alt="Wolfram"></a>
   </div>
 
   <p>
