added Microsoft as a supporter, archived images of old sponsors

--- a/views/index.erb
+++ b/views/index.erb
@@ -79,6 +79,7 @@
   <h3>Supporters</h3>
   <div class="logos sponsors">
     <a href="https://www.wolframalpha.com/"><img src="img/sponsors/wolfram.png" height="40" alt="Wolfram"></a>
+    <a href="https://www.microsoft.com"><img src="img/sponsors/microsoft.png" height="40" alt="Microsoft"></a>
   </div>
 
   <p>
