--- a/views/sponsor.erb
+++ b/views/sponsor.erb
@@ -6,33 +6,30 @@
       <h1>Become a Sponsor</h1>
 
       <p class="sponsor__info">
-        The <span class="bold-blue">5C Hackathon</span> is an entirely student-run event held on Pomona College’s campus. Last fall, over 300 of the Claremont Colleges’ brightest technical minds spent 12 hours working on projects ranging from a real-time LaTeX messenger to a multiplayer space game that uses your smartphone as a controller.
+        The <span class="bold-blue">5C Hackathon</span> is an entirely student-run event held at Pomona College. Last fall, 350 students at the Claremont Colleges spent 12 hours working on projects ranging from a Pac-Man clone controlled by the user’s face to an app designed for undocumented people to hear their rights and alert their loved ones upon being detained.
       </p>
 
       <p class="sponsor__info">
-        The 5C Hackathon has rapidly become a highly anticipated and attended tradition at the Claremont Colleges, drawing talent from all five schools in the consortium: <span class="bold-blue">Pomona, Harvey Mudd, Claremont McKenna, Scripps, and Pitzer</span>. We also attract students from nearby colleges, such as University of Southern California and UCLA, as well as from local high schools.
+        Our hackathon is a highly anticipated and attended tradition at the Claremont Colleges, drawing creative minds from all five schools in the consortium: <span class="bold-blue">Pomona, Harvey Mudd, Claremont McKenna, Scripps, and Pitzer</span>. We also attract students from nearby colleges, such as University of Southern California and UCLA, as well as from local high schools.
       </p>
-
 
       <h2 class="no-margin-top dark-blue">What makes the 5C Hackathon different?</h2>
 
       <p class="sponsor__info">
-        We pride ourselves on building a technical community at the Claremont Colleges that is creative and diverse. With that in mind, we have a strong focus on making the 5C Hackathon <span class="bold-blue">beginner-friendly and inclusive</span>. Last year, <span class="bold-blue">46% of our attendees were first-time hackers and 45% were female</span>.
+        We pride ourselves on building a technical community at the Claremont Colleges that is creative and diverse. With that in mind, we have a strong focus on making the 5C Hackathon <span class="bold-blue">beginner-friendly and inclusive</span>. Last year, <span class="bold-blue">46% of our participants were attending their first hackathon</span>. We’ve co-hosted talks and workshops addressing issues of ethical coding and sexual assault in the tech industry, and last year, we introduced a <span class="bold-blue"> prize for positive social impact</span>.
       </p>
 
       <p class="sponsor__info">
-        <span class="bold-blue">Teaching and mentorship</span> are also of the utmost importance to us. We offer beginner and advanced workshops throughout the week before the hackathon. The beginner workshops offer students the opportunity to learn coding basics so that they can participate in the hackathon. The advanced workshops teach students with technical experience a new skill or tool to utilize at the hackathon. In the past, we’ve taught how to make mobile apps using Android, web apps using Node.js, and digital art using P5.
-      </p>
-
-      <p class="sponsor__info">
-        We also have mentors throughout the night of the Hackathon who are available to help develop ideas or provide technical guidance.
+        <span class="bold-blue">Teaching and mentorship</span> are also of the utmost importance to us. <span class="bold-blue"> We teach beginner and advanced workshops </span> throughout the week preceding the hackathon. In the past, we’ve taught how to make mobile apps using Android, web apps using Node.js, and digital art using P5. We also have mentors through the night of the hackathon who help participants develop ideas and provide technical guidance.
       </p>
 
       <h2 class="no-margin-top dark-blue">Why sponsor?</h2>
 
       <p class="sponsor__info">
-        Sponsoring is a great way to connect with some of the top computer science students at the Claremont Colleges. By sponsoring, you can <span class="bold-blue">get access to the resumes of over 300 students</span>, <span class="bold-blue">showcase your API or product</span>, and see students make awesome projects. As a sponsor, you’ll also have the opportunity to mentor students and get them excited about programming!
+        Sponsoring is a great way to connect with incredibly talented and creative students at the Claremont Colleges, in computer science and in other fields. By sponsoring, you can <span class="bold-blue">get access to the resumes of hundreds of students, showcase your API or product, and see students make awesome projects</span>. As a sponsor, you’ll also have the opportunity to mentor students and get them excited about programming!
       </p>
+
+      <h2 class="no-margin-top dark-blue">Ready to sponsor?</h2>
 
       <p class="sponsor__info">
         Please see the sponsorship tiers below detailing the different ways in which you can be part of the 5C Hackathon. Can’t find a tier that works for you? <span class="bold-blue">Shoot us an email at <a href="mailto:5chackathon@gmail.com">5chackathon@gmail.com</a></span> and we’ll work out the details.</p>
