--- a/views/index.erb
+++ b/views/index.erb
@@ -68,18 +68,6 @@
   <h3>Gold</h3>
   <div class="logos sponsors">
     <a href="http://www.google.com/"><img src="img/sponsors/google.png" height="60" alt="Google"></a>
-    <a href="http://www.intuit.com/"><img src="img/sponsors/intuit.png" height="60" alt="LiveRamp"></a>
-  </div>
-
-  <h3>Bronze</h3>
-  <div class="logos sponsors">
-    <a href="https://www.laserfiche.com/"><img src="img/sponsors/laserfiche.png" height="45" alt="Laserfiche"></a>
-  </div>
-
-  <h3>Supporters</h3>
-  <div class="logos sponsors">
-    <a href="https://www.wolframalpha.com/"><img src="img/sponsors/wolfram.png" height="40" alt="Wolfram"></a>
-    <a href="https://www.microsoft.com"><img src="img/sponsors/microsoft.png" height="40" alt="Microsoft"></a>
   </div>
 
   <p>
@@ -95,16 +83,9 @@
       <!-- <div class="speaker__company" style="color: #fff;"></div> -->
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/erinna.png);"></div>
+        <div class="speaker__img" style="background-image: url(img/team/alice.png);"></div>
       </div>
-      <div class="speaker__name" style="color:#fff;">Erinna Woo</div>
-      <div class="speaker__title" style="color: #fff;">Senior</div>
-    </div>
-    <div class="speaker">
-      <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/gloria.png);"></div>
-      </div>
-      <div class="speaker__name" style="color:#fff">Gloria Liou</div>
+      <div class="speaker__name" style="color:#fff">Alice Tan</div>
       <div class="speaker__title" style="color: #fff;">Senior</div>
     </div>
     <div class="speaker">
@@ -112,7 +93,7 @@
         <div class="speaker__img" style="background-image: url(img/team/wentao.png);"></div>
       </div>
       <div class="speaker__name" style="color:#fff;">Wentao Guo</div>
-      <div class="speaker__title" style="color: #fff;">Junior</div>
+      <div class="speaker__title" style="color: #fff;">Senior</div>
     </div>
   </div>
 </section>
