Added Intuit as gold sponsor

--- a/views/index.erb
+++ b/views/index.erb
@@ -68,6 +68,7 @@
   <h3>Gold</h3>
   <div class="logos sponsors">
     <a href="http://www.google.com/"><img src="img/sponsors/google.png" height="60" alt="Google"></a>
+    <a href="http://www.intuit.com/"><img src="img/sponsors/intuit.png" height="60" alt="Intuit"></a>
   </div>
 
   <p>
