--- a/public/styles.css
+++ b/public/styles.css
@@ -564,7 +564,7 @@ header:after {
 
 .reg:after {
   /* Coming soon text */
-  content: "coming soon";
+  /*content: "coming soon";*/
   /* When enabling/disabling, make sure to (un)comment the
      .nav--link.reg margin-top lines, too (for mobile layouts) */
   text-transform: uppercase;
