Updated Hack Week

--- a/views/index.erb
+++ b/views/index.erb
@@ -141,10 +141,9 @@
     <h2 style="color: #00467f; margin: -.5em 0 .25em;">Hack Week is a weeklong series of workshops teaching useful technical skills for both beginning and advanced coders and covering socially relevant issues within the world of tech and computer science.</h2>
     <div class="desc">
       <h3>When</h3>
-      <p>Hack Week is every evening from 8:30&ndash;10 p.m. starting the Monday before the Hackathon and culminating in the 5C Hackathon on Friday.</p>
+      <p>Hack Week events are at various times in the afternoons and evenings starting the Saturday before the Hackathon and culminating in the 5C Hackathon on Friday.</p>
       <h3>What</h3>
-      <p><b>Want to learn coding skills?</b> <a href="https://www.facebook.com/events/131178800873103/">Hack Week workshops</a> will help you learn how to build and host a website, create an Android application from the ground up, and use GitHub with your next project.</p>
-      <p><b>Want to learn about issues in the world of computer science?</b> Workshops hosted by <a href="https://www.facebook.com/events/2375014649389540/">Tech for Good</a> and the <a href="https://www.facebook.com/events/370825743345589/">Pomona College Advocates</a> will be discussing human-centered software development and sexual assault and discrimination in the tech industry.</p>
+      <p><b>Want to learn coding skills?</b> <a href="https://www.facebook.com/events/1334252960044921/">Hack Week workshops</a> will help you learn how to build and host a website, create an Android application from the ground up, and use GitHub with your next project.</p>
       <h3>Code</h3>
       <p>Check out the apps from this year and previous years at our <a href="http://github.com/5CHackathon">GitHub</a> page. During Hack Week, starter code for technical workshops will also be uploaded here.</p>
     </div>
