Updated images of organizing team members, updated schedule, and made small change to Hack Week description.

--- a/views/index.erb
+++ b/views/index.erb
@@ -37,12 +37,16 @@
       <td>Chipotle</td>
     </tr>
     <tr>
-      <td class="session__time">4:00 AM</td>
-      <td>Krispy Kreme</td>
+      <td class="session__time">1:30 AM</td>
+      <td>Turn in projects (6-hour category)</td>
+    </tr>
+    <tr>
+      <td class="session__time">7:30 AM</td>
+      <td>Turn in projects (12-hour category)</td>
     </tr>
     <tr>
       <td class="session__time">8:00 AM</td>
-      <td>Expo Presentation</td>
+      <td>Expo presentation</td>
     </tr>
     <tr>
       <td class="session__time">9:30 AM</td>
@@ -50,7 +54,7 @@
     </tr>
     <tr>
       <td class="session__time">10:00 AM</td>
-      <td>Bed time</td>
+      <td>Thanks for coming!</td>
     </tr>
   </table>
 </section>
@@ -91,10 +95,45 @@
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
+        <div class="speaker__img" style="background-image: url(img/team/cleo.jpg);"></div>
+      </div>
+      <div class="speaker__name" style="color:#fff;">Cleo Forman</div>
+      <div class="speaker__title" style="color: #fff;">Junior</div>
+    </div>
+    <div class="speaker">
+      <div class="speaker__wrap">
+        <div class="speaker__img" style="background-image: url(img/team/harini.jpg);"></div>
+      </div>
+      <div class="speaker__name" style="color:#fff;">Harini Salgado</div>
+      <div class="speaker__title" style="color: #fff;">Senior</div>
+    </div>
+    <div class="speaker">
+      <div class="speaker__wrap">
+        <div class="speaker__img" style="background-image: url(img/team/mckenna.png);"></div>
+      </div>
+      <div class="speaker__name" style="color:#fff;">McKenna Barlow</div>
+      <div class="speaker__title" style="color: #fff;">Junior</div>
+    </div>
+    <div class="speaker">
+      <div class="speaker__wrap">
+        <div class="speaker__img" style="background-image: url(img/team/moe.jpg);"></div>
+      </div>
+      <div class="speaker__name" style="color:#fff;">Moe Sunami</div>
+      <div class="speaker__title" style="color: #fff;">Sophomore</div>
+    </div>
+    <div class="speaker">
+      <div class="speaker__wrap">
         <div class="speaker__img" style="background-image: url(img/team/wentao.png);"></div>
       </div>
       <div class="speaker__name" style="color:#fff;">Wentao Guo</div>
       <div class="speaker__title" style="color: #fff;">Senior</div>
+    </div>
+    <div class="speaker">
+      <div class="speaker__wrap">
+        <div class="speaker__img" style="background-image: url(img/team/william.png);"></div>
+      </div>
+      <div class="speaker__name" style="color:#fff;">William Baird-Smith</div>
+      <div class="speaker__title" style="color: #fff;">Junior</div>
     </div>
   </div>
 </section>
@@ -145,7 +184,7 @@
       <h3>What</h3>
       <p><b>Want to learn coding skills?</b> <a href="https://www.facebook.com/events/1334252960044921/">Hack Week workshops</a> will help you learn how to build and host a website, create an Android application from the ground up, and use GitHub with your next project.</p>
       <h3>Code</h3>
-      <p>Check out the apps from this year and previous years at our <a href="http://github.com/5CHackathon">GitHub</a> page. During Hack Week, starter code for technical workshops will also be uploaded here.</p>
+      <p>Check out the apps from this year and previous years at our <a href="http://github.com/5CHackathon">GitHub</a> page. During Hack Week, starter code for technical workshops may also be uploaded here.</p>
     </div>
   </div>
 </section>
