--- a/views/index.erb
+++ b/views/index.erb
@@ -18,8 +18,8 @@
 
 <section class="schedule" id="schedule">
   <table class="layout--page">
-    <div class="caption">Fall 2018 Schedule</div>
-    <h4 style="text-align: center; margin-top: -.5em; margin-bottom: 1em;">November 2&ndash;3, 2018</h4>
+    <div class="caption">Spring 2020 Schedule</div>
+    <h4 style="text-align: center; margin-top: -.5em; margin-bottom: 1em;">April 3&ndash;4, 2020</h4>
     <tr>
       <td class="session__time">6:30 PM</td>
       <td>Check-in at Edmunds Ballroom (Pomona)</td>
