--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title><%= @title %></title>
-<meta name="description" content="5C Hackathon November 2-3, 2018">
+<meta name="description" content="5C Hackathon April 3-4, 2020">
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="styles.css">
@@ -44,7 +44,7 @@
         <div class="footer__title">
           5C Hackathon
           <span class="footer__date">
-            November 2-3, 2018 &nbsp; &nbsp; Pomona College
+            April 3-4 2020 &nbsp; &nbsp; Pomona College
           </span>
         </div>
       </div>
@@ -66,7 +66,7 @@
             <i class="fa fa-twitter"></i><span class="visuallyhidden">Twitter</span>
           </a>
         </div>
-        <span class="closure__copy">&copy; 2018 5C Hackathon</span>
+        <span class="closure__copy">&copy; 2020 5C Hackathon</span>
       </div>
     </div>
   </footer>
