--- a/views/layout.erb
+++ b/views/layout.erb
@@ -44,7 +44,7 @@
         <div class="footer__title">
           5C Hackathon
           <span class="footer__date">
-            April 3-4 2020 &nbsp; &nbsp; Pomona College
+            April 3-4 2020 &nbsp; &nbsp; The Claremont Colleges
           </span>
         </div>
       </div>
