--- a/views/index.erb
+++ b/views/index.erb
@@ -37,6 +37,10 @@
       <td>Chipotle</td>
     </tr>
     <tr>
+      <td class="session__time">12:00 AM</td>
+      <td>Midnight Snack</td>
+    </tr>
+    <tr>
       <td class="session__time">1:30 AM</td>
       <td>Turn in projects (6-hour category)</td>
     </tr>
@@ -45,16 +49,40 @@
       <td>Turn in projects (12-hour category)</td>
     </tr>
     <tr>
-      <td class="session__time">8:00 AM</td>
-      <td>Expo presentation</td>
+      <td class="session__time">9:00 AM</td>
+      <td>Breakfast on the Patio</td>
     </tr>
     <tr>
-      <td class="session__time">9:30 AM</td>
-      <td>Awards ceremony</td>
+      <td class="session__time">12:00 PM</td>
+      <td>Lunch Catering</td>
     </tr>
     <tr>
-      <td class="session__time">10:00 AM</td>
-      <td>Thanks for coming!</td>
+      <td class="session__time">1:30 PM</td>
+      <td>Sponsor Meet and Greet (ongoing)</td>
+    </tr>
+    <tr>
+      <td class="session__time">3:00 PM</td>
+      <td>Break on the Quad</td>
+    </tr>
+    <tr>
+      <td class="session__time">5:00 PM</td>
+      <td>Dinner</td>
+    </tr>
+    <tr>
+      <td class="session__time">7:30 PM</td>
+      <td>Turn in projects (24-hour category)</td>
+    </tr>
+    <tr>
+      <td class="session__time">8 PM</td>
+      <td>Expo Presentation</td>
+    </tr>
+    <tr>
+      <td class="session__time">9:30 PM</td>
+      <td>Awards Ceremony</td>
+    </tr>
+    <tr>
+      <td class="session__time">10:00 PM</td>
+      <td>Thanks for Coming!</td>
     </tr>
   </table>
 </section>
@@ -80,62 +108,6 @@
       Interested in sponsoring the Fall 2019 Hackathon? Click <a href="/sponsor">here</a> for more information.
     </h5>
   </p>
-</section>
-
-<section class="team" id="team">
-  <div class="layout--page">
-    <h1 style="color: #fff;">The Planning Committee</h1>
-      <!-- <div class="speaker__company" style="color: #fff;"></div> -->
-    <div class="speaker">
-      <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/alice.png);"></div>
-      </div>
-      <div class="speaker__name" style="color:#fff">Alice Tan</div>
-      <div class="speaker__title" style="color: #fff;">Senior</div>
-    </div>
-    <div class="speaker">
-      <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/cleo.jpg);"></div>
-      </div>
-      <div class="speaker__name" style="color:#fff;">Cleo Forman</div>
-      <div class="speaker__title" style="color: #fff;">Junior</div>
-    </div>
-    <div class="speaker">
-      <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/harini.jpg);"></div>
-      </div>
-      <div class="speaker__name" style="color:#fff;">Harini Salgado</div>
-      <div class="speaker__title" style="color: #fff;">Senior</div>
-    </div>
-    <div class="speaker">
-      <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/mckenna.png);"></div>
-      </div>
-      <div class="speaker__name" style="color:#fff;">McKenna Barlow</div>
-      <div class="speaker__title" style="color: #fff;">Junior</div>
-    </div>
-    <div class="speaker">
-      <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/moe.jpg);"></div>
-      </div>
-      <div class="speaker__name" style="color:#fff;">Moe Sunami</div>
-      <div class="speaker__title" style="color: #fff;">Sophomore</div>
-    </div>
-    <div class="speaker">
-      <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/wentao.png);"></div>
-      </div>
-      <div class="speaker__name" style="color:#fff;">Wentao Guo</div>
-      <div class="speaker__title" style="color: #fff;">Senior</div>
-    </div>
-    <div class="speaker">
-      <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/william.png);"></div>
-      </div>
-      <div class="speaker__name" style="color:#fff;">William Baird-Smith</div>
-      <div class="speaker__title" style="color: #fff;">Junior</div>
-    </div>
-  </div>
 </section>
 
 <section class="coc" id="coc">
