--- a/views/index.erb
+++ b/views/index.erb
@@ -105,7 +105,7 @@
 
   <p>
     <h5 style="color: #000;">
-      Interested in sponsoring the Fall 2019 Hackathon? Click <a href="/sponsor">here</a> for more information.
+      Interested in sponsoring the Spring 2020 Hackathon? Click <a href="/sponsor">here</a> for more information.
     </h5>
   </p>
 </section>
