--- a/views/index.erb
+++ b/views/index.erb
@@ -69,19 +69,15 @@
       <td>Dinner</td>
     </tr>
     <tr>
-      <td class="session__time">7:30 PM</td>
-      <td>Turn in projects (24-hour category)</td>
+      <td class="session__time">6:30 PM</td>
+      <td>Hacking ends (24-hour category); Project Expo Presentations begin</td>
     </tr>
     <tr>
-      <td class="session__time">8:00 PM</td>
-      <td>Expo Presentation</td>
-    </tr>
-    <tr>
-      <td class="session__time">9:30 PM</td>
+      <td class="session__time">8:45 PM</td>
       <td>Awards Ceremony</td>
     </tr>
     <tr>
-      <td class="session__time">10:00 PM</td>
+      <td class="session__time">9:00 PM</td>
       <td>Thanks for Coming!</td>
     </tr>
   </table>
