added register link and removed coming soon tag

--- a/views/fullpage.erb
+++ b/views/fullpage.erb
@@ -52,7 +52,7 @@ header {
           <li class=""><a class="nav--link" href="/#companies" data-text="SPONSORS">Sponsors</a></li>
           <li class=""><a class="nav--link" href="/#team" data-text="TEAM">Team</a></li>
           <li class=""><a class="nav--link" href="/#hack-week" data-text="HACK WEEK">Hack Week</a></li>
-          <li><a href="#" class="nav--link reg">Register</a></li>
+          <li><a href="https://5chackathon.typeform.com/to/SbAK4T" class="nav--link reg">Register</a></li>
         </ul>
       </nav>
     </div>
