--- a/views/layout.erb
+++ b/views/layout.erb
@@ -29,7 +29,7 @@
           <li class=""><a class="nav--link" href="/#companies" data-text="SPONSORS">Sponsors</a></li>
           <li class=""><a class="nav--link" href="/#team" data-text="TEAM">Team</a></li>
           <li class=""><a class="nav--link" href="/#hack-week" data-text="HACK WEEK">Hack Week</a></li>
-          <li><a style="cursor: pointer;" class="nav--link reg">Register</a></li>
+          <li><a href="https://5chackathon.typeform.com/to/SbAK4T" style="cursor: pointer;" class="nav--link reg">Register</a></li>
         </ul>
       </nav>
     </div>
@@ -48,7 +48,7 @@
           </span>
         </div>
       </div>
-      <a style="cursor: pointer;" class="footer__reg reg">Register</a>
+      <a href="https://5chackathon.typeform.com/to/SbAK4T" style="cursor: pointer;" class="footer__reg reg">Register</a>
     </div>
     <div class="closure">
       <div class="layout--page">
