--- a/public/styles.css
+++ b/public/styles.css
@@ -562,9 +562,10 @@ header:after {
   background-color: #fff;
 }
 
+
 .reg:after {
   /* Coming soon text */
-  content: "coming soon";
+  /*content: "coming soon";*/
   /* When enabling/disabling, make sure to (un)comment the
      .nav--link.reg margin-top lines, too (for mobile layouts) */
   text-transform: uppercase;
@@ -583,6 +584,7 @@ header:after {
   font-weight: bold;
   font-size: .5em;
 }
+
 
 .banner {
   width: 100%;
