added past and present sponsors

--- a/views/index.erb
+++ b/views/index.erb
@@ -85,24 +85,47 @@
 
 <section class="companies" id="companies">
 <div class="layout--page">
-  <h1 style="margin-bottom: 0.25em;">Fall 2018 Sponsors</h1>
-  <!-- <h3 style="margin-top: -1em;">([semester] sponsors will be announced shortly!)</h3> -->
-
-  <h3>Platinum</h3>
-  <div class="logos sponsors">
-    <a href="https://www.proofpoint.com/"><img src="img/sponsors/proofpoint.png" height="90" alt="Proofpoint"></a>
+  <h1 style="margin-bottom: 0.25em;">Sponsors</h1>
+    <br>
+    <br>
+    <h4 style="font-size: 2em; text-align: center; margin-top: -.5em; margin-bottom: 1em;">Spring 2020</h4>
+    <div class="logos sponsors">
+    <a href="https://www.okta.com/"><img src="img/sponsors/SP 2020/okta.png" height="90" alt="Okta"></a>
   </div>
-
-  <h3>Gold</h3>
-  <div class="logos sponsors">
-    <a href="http://www.google.com/"><img src="img/sponsors/google.png" height="60" alt="Google"></a>
-    <a href="http://www.intuit.com/"><img src="img/sponsors/intuit.png" height="60" alt="Intuit"></a>
+    <div class="logos sponsors">
+    <a href="https://www.bloomberg.com/company/"><img src="img/sponsors/SP 2020/bloomberg.jpg" height="120"  alt="Bloomberg L.P."></a>
   </div>
+   
+  
+    <br>
+    <br>
+    <h4 style="font-size: 2em; text-align: center; margin-top: -.5em; margin-bottom: 1em;">Previous</h4>
+    
+    <div class="logos sponsors">
+    <img src="img/sponsors/past-sponsors.png" width="500" alt="Collage of Previous Sponsors">
+  </div>
+    <!--<ul>
+    
+        <il><h3> Proofpoint</h3> </il><br>
+        <il><h3> Google</h3> </il><br>
+        <il><h3> Intuit</h3> </il><br>
+        <il><h3> Coursera</h3> </il><br>
+        <il><h3> Facebook</h3> </il><br>
+        <il> <h3> Microsoft</h3></il><br>
+        <il> <h3> Qualtrics</h3></il><br>
+        <il> <h3> Quora</h3></il><br>
+        <il> <h3> Salesforce</h3></il><br>
+        <il> <h3> Square</h3></il><br>
+        <il> <h3> Stripe </h3></il><br>
+    
+    </ul>
+
+    -->
 
   <p>
-    <h5 style="color: #000;">
+    <h2 style="color: #000;">
       Interested in sponsoring the Spring 2020 Hackathon? Click <a href="/sponsor">here</a> for more information.
-    </h5>
+    </h2>
   </p>
 </section>
 
