--- a/views/index.erb
+++ b/views/index.erb
@@ -104,27 +104,11 @@
     <div class="logos sponsors">
     <img src="img/sponsors/past-sponsors.png" width="500" alt="Collage of Previous Sponsors">
   </div>
-    <!--<ul>
-    
-        <il><h3> Proofpoint</h3> </il><br>
-        <il><h3> Google</h3> </il><br>
-        <il><h3> Intuit</h3> </il><br>
-        <il><h3> Coursera</h3> </il><br>
-        <il><h3> Facebook</h3> </il><br>
-        <il> <h3> Microsoft</h3></il><br>
-        <il> <h3> Qualtrics</h3></il><br>
-        <il> <h3> Quora</h3></il><br>
-        <il> <h3> Salesforce</h3></il><br>
-        <il> <h3> Square</h3></il><br>
-        <il> <h3> Stripe </h3></il><br>
-    
-    </ul>
 
-    -->
 
   <p>
     <h2 style="color: #000;">
-      Interested in sponsoring the Spring 2020 Hackathon? Click <a href="/sponsor">here</a> for more information.
+      Interested in <a href="/sponsor">sponsoring </a> the Spring 2020 Hackathon? 
     </h2>
   </p>
 </section>
