Revert "added register link and removed coming soon tag"
This reverts commit df652195d4982b35d574153359c47d94d81765f7.

--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
         Whether you're making your first website or hacking on a Raspberry Pi, the 5C Hackathon is the perfect place to have fun and learn something new. We provide awesome swag, food, and mentorship throughout the entire 24-hour event.
       </p>
       <p class="intro__desc">Still interested? Let's do this.</p>
-      <a href="https://5chackathon.typeform.com/to/SbAK4T" style="cursor: pointer;" class="reg intro__reg"><span class="nowrap mainbutton">REGISTER NOW!</span></a>
+      <a style="cursor: pointer;" class="reg intro__reg"><span class="nowrap mainbutton">REGISTER NOW!</span></a>
     </div>
   </div>
 </section>
