--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
         Whether you're making your first website or hacking on a Raspberry Pi, the 5C Hackathon is the perfect place to have fun and learn something new. We provide awesome swag, food, and mentorship throughout the entire 24-hour event.
       </p>
       <p class="intro__desc">Still interested? Let's do this.</p>
-      <a href="https://5chackathon.typeform.com/to/SbAK4T" style="cursor: pointer;" class="reg intro__reg"><span class="nowrap mainbutton">REGISTER NOW!</span></a>
+      <a style="cursor: pointer;" class="reg intro__reg"><span class="nowrap mainbutton">REGISTER NOW!</span></a>
     </div>
   </div>
 </section>
@@ -85,31 +85,24 @@
 
 <section class="companies" id="companies">
 <div class="layout--page">
-  <h1 style="margin-bottom: 0.25em;">Sponsors</h1>
-    <br>
-    <br>
-    <h4 style="font-size: 2em; text-align: center; margin-top: -.5em; margin-bottom: 1em;">Spring 2020</h4>
-    <div class="logos sponsors">
-    <a href="https://www.okta.com/"><img src="img/sponsors/SP 2020/okta.png" height="90" alt="Okta"></a>
-  </div>
-    <div class="logos sponsors">
-    <a href="https://www.bloomberg.com/company/"><img src="img/sponsors/SP 2020/bloomberg.jpg" height="120"  alt="Bloomberg L.P."></a>
-  </div>
-   
-  
-    <br>
-    <br>
-    <h4 style="font-size: 2em; text-align: center; margin-top: -.5em; margin-bottom: 1em;">Previous</h4>
-    
-    <div class="logos sponsors">
-    <img src="img/sponsors/past-sponsors.png" width="500" alt="Collage of Previous Sponsors">
+  <h1 style="margin-bottom: 0.25em;">Fall 2018 Sponsors</h1>
+  <!-- <h3 style="margin-top: -1em;">([semester] sponsors will be announced shortly!)</h3> -->
+
+  <h3>Platinum</h3>
+  <div class="logos sponsors">
+    <a href="https://www.proofpoint.com/"><img src="img/sponsors/proofpoint.png" height="90" alt="Proofpoint"></a>
   </div>
 
+  <h3>Gold</h3>
+  <div class="logos sponsors">
+    <a href="http://www.google.com/"><img src="img/sponsors/google.png" height="60" alt="Google"></a>
+    <a href="http://www.intuit.com/"><img src="img/sponsors/intuit.png" height="60" alt="Intuit"></a>
+  </div>
 
   <p>
-    <h2 style="color: #000;">
-      Interested in <a href="/sponsor">sponsoring </a> the Spring 2020 Hackathon? 
-    </h2>
+    <h5 style="color: #000;">
+      Interested in sponsoring the Spring 2020 Hackathon? Click <a href="/sponsor">here</a> for more information.
+    </h5>
   </p>
 </section>
 
