--- a/views/index.erb
+++ b/views/index.erb
@@ -9,6 +9,8 @@
       <h1 class="tag">A Hackathon Like No Other.</h1>
       <p class="intro__desc">
         Whether you're making your first website or hacking on a Raspberry Pi, the 5C Hackathon is the perfect place to have fun and learn something new. We provide awesome swag, food, and mentorship throughout the entire 24-hour event.
+
+
       </p>
       <p class="intro__desc">Still interested? Let's do this.</p>
       <a href="https://5chackathon.typeform.com/to/SbAK4T" style="cursor: pointer;" class="reg intro__reg"><span class="nowrap mainbutton">REGISTER NOW!</span></a>
@@ -85,24 +87,43 @@
 
 <section class="companies" id="companies">
 <div class="layout--page">
-  <h1 style="margin-bottom: 0.25em;">Fall 2018 Sponsors</h1>
-  <!-- <h3 style="margin-top: -1em;">([semester] sponsors will be announced shortly!)</h3> -->
-
-  <h3>Platinum</h3>
-  <div class="logos sponsors">
-    <a href="https://www.proofpoint.com/"><img src="img/sponsors/proofpoint.png" height="90" alt="Proofpoint"></a>
+  <h1 style="margin-bottom: 0.25em;">Sponsors</h1>
+    <br>
+    <br>
+    <h4 style="font-size: 2em; text-align: center; margin-top: -.5em; margin-bottom: 1em;">Spring 2020</h4>
+    <div class="logos sponsors">
+    <a href="https://www.okta.com/"><img src="img/sponsors/SP 2020/okta.png" height="90" alt="Okta"></a>
+  </div>
+    <div class="logos sponsors">
+    <a href="https://www.bloomberg.com/company/"><img src="img/sponsors/SP 2020/bloomberg.jpg" height="120"  alt="Bloomberg L.P."></a>
+  </div>
+    <br>
+    <div class="logos sponsors">
+    <a href="https://www.bloomberg.com/company/"><img src="img/sponsors/SP 2020/teaser_mixmax.jpg" height="120"  alt="MixMax"></a>
   </div>
 
-  <h3>Gold</h3>
-  <div class="logos sponsors">
-    <a href="http://www.google.com/"><img src="img/sponsors/google.png" height="60" alt="Google"></a>
-    <a href="http://www.intuit.com/"><img src="img/sponsors/intuit.png" height="60" alt="Intuit"></a>
+    <div class="logos sponsors">
+    <a href="https://www.intuit.com/"><img src="img/sponsors/intuit.png" height="75"  alt="Intuit"></a>
+  </div><br>
+
+    <div class="logos sponsors">
+    <a href="https://www.microsoft.com"><img src="img/sponsors/microsoft.png" height="75"  alt="Microsoft"></a>
   </div>
+
+
+    <br>
+    <br>
+    <h4 style="font-size: 2em; text-align: center; margin-top: -.5em; margin-bottom: 1em;">Previous</h4>
+
+    <div class="logos sponsors">
+    <img src="img/sponsors/past-sponsors.png" width="500" alt="Collage of Previous Sponsors">
+  </div>
+
 
   <p>
-    <h5 style="color: #000;">
-      Interested in sponsoring the Spring 2020 Hackathon? Click <a href="/sponsor">here</a> for more information.
-    </h5>
+    <h2 style="color: #000;">
+      Interested in <a href="/sponsor">sponsoring </a> the Spring 2020 Hackathon?
+    </h2>
   </p>
 </section>
 
