--- a/views/index.erb
+++ b/views/index.erb
@@ -99,7 +99,7 @@
   </div>
     <br>
     <div class="logos sponsors">
-    <a href="https://www.bloomberg.com/company/"><img src="img/sponsors/SP 2020/teaser_mixmax.jpg" height="120"  alt="MixMax"></a>
+    <a href="https://www.bloomberg.com/company/"><img src="img/sponsors/SP 2020/Mixmax.jpg" height="120"  alt="MixMax"></a>
   </div>
 
     <div class="logos sponsors">
