fixed Mixmax link and removed old sponsors

--- a/views/index.erb
+++ b/views/index.erb
@@ -99,7 +99,7 @@
   </div>
     <br>
     <div class="logos sponsors">
-    <a href="https://www.bloomberg.com/company/"><img src="img/sponsors/SP 2020/Mixmax.jpg" height="120"  alt="MixMax"></a>
+    <a href="https://mixmax.com/"><img src="img/sponsors/SP 2020/Mixmax.png" height="120"  alt="MixMax"></a>
   </div>
 
     <div class="logos sponsors">
@@ -111,13 +111,13 @@
   </div>
 
 
-    <br>
+    <!-- <br>
     <br>
     <h4 style="font-size: 2em; text-align: center; margin-top: -.5em; margin-bottom: 1em;">Previous</h4>
 
     <div class="logos sponsors">
     <img src="img/sponsors/past-sponsors.png" width="500" alt="Collage of Previous Sponsors">
-  </div>
+  </div> -->
 
 
   <p>
