fixed mixmax again

--- a/views/index.erb
+++ b/views/index.erb
@@ -99,7 +99,7 @@
   </div>
     <br>
     <div class="logos sponsors">
-    <a href="https://mixmax.com/"><img src="img/sponsors/SP 2020/Mixmax.png" height="120"  alt="MixMax"></a>
+    <a href="https://mixmax.com/"><img src="img/sponsors/SP 2020/mixmax.png" height="120"  alt="MixMax"></a>
   </div>
 
     <div class="logos sponsors">
