added KSPC DJ set time

--- a/views/index.erb
+++ b/views/index.erb
@@ -59,12 +59,8 @@
       <td>Lunch Catering</td>
     </tr>
     <tr>
-      <td class="session__time">1:30 PM</td>
-      <td>Sponsor Meet and Greet (ongoing)</td>
-    </tr>
-    <tr>
       <td class="session__time">3:00 PM</td>
-      <td>Break on the Quad</td>
+      <td>Break! KSPC DJ Set and Other Activities</td>
     </tr>
     <tr>
       <td class="session__time">5:00 PM</td>
